# compressible-map

./: Cargo.toml  README.md
examples/: multi_threaded.rs  single_threaded.rs
src/: bincode_lz4.rs  bincode_snappy.rs  compressible_map.rs  compression.rs  lib.rs  local_cache.rs  lru_cache.rs
src/compression/: compressed_bincode.rs  lz4_compression.rs  snappy_compression.rs
