[package]
name = "compressible-map"
version = "0.1.0"
authors = ["Duncan Fairbanks <bonsairobo@gmail.com>"]
edition = "2018"

[features]
default = []

bincode_lz4 = ["bincode", "lz4", "serde"]

[dependencies]
bincode = { version = "1.3", optional = true }
lz4 = { version = "1.23", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
crossbeam = "0.7"
