[package]
name = "compressible-map"
version = "0.1.3"
edition = "2018"
authors = ["Duncan Fairbanks <bonsairobo@gmail.com>"]
description = "A hash map that allows compressing the least recently used values."
license = "MIT"
repository = "https://github.com/bonsairobo/compressible-map"
keywords = ["voxel"]

[features]
default = []

bincode_lz4 = ["bincode", "lz4", "serde"]

[dependencies]
bincode = { version = "1.3", optional = true }
lz4 = { version = "1.23", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
crossbeam = "0.7"
